Fix: video source

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,6 +40,6 @@
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
 
-#aboutme, #publications, #portfolio {
+#aboutme, #publications, #projects {
     scroll-margin-top: 65px; /* 헤더 높이만큼 조정 */
   }
