--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -24,7 +24,7 @@
     <button class="btn btn--inverse">Follow</button>
     <ul class="author__urls social-icons">
       <!-- Font Awesome icons / Biographic information  -->
-      <li><a href="{{ base_path }}/files/paper1.pdf"><i class="fas fa-fw fa-scroll icon-pad-right" aria-hidden="true"></i>CV</a></li>
+      <li><a href="{{ base_path }}/files/cv_YounhoJeon.pdf"><i class="fas fa-fw fa-scroll icon-pad-right" aria-hidden="true"></i>CV</a></li>
 
       {% if author.location %}
         <li class="author__desktop"><i class="fa-solid fa-location-dot icon-pad-right" aria-hidden="true"></i>{{ author.location }}</li>
