--- a/_includes/projects_list.html
+++ b/_includes/projects_list.html
@@ -66,7 +66,7 @@
         </a></h3>
         <div style="height: 15px;"></div>
         <p style="font-size: 15px; color: #666666;">
-          Keywords: Sequence Prediction, Sketch Stroke Generation, 
+          Keywords: Sequence Prediction, Sketch Stroke Generation
         </p>
       </div>
     </div>
