--- a/_includes/projects_list.html
+++ b/_includes/projects_list.html
@@ -8,7 +8,7 @@
       </div>
       <div class="portfolio-description">
         <h3><a href="/projects/projects-1/" class="portfolio-title">
-          Video Generation with Inference Image and Pose Guidance
+          Video Generation with Reference Image and Pose Guidance
         </a></h3>
         <div style="height: 15px;"></div>
         <p style="font-size: 15px; color: #666666;">
